website/websites/u64q/code/knucleotide.4.scala.log

Thu, 12 May 2011 17:22:43 GMT

MAKE:
mv knucleotide.scala-4.scala knucleotide.scala
/usr/local/src/scala-2.9.0.final/bin/scalac knucleotide.scala
knucleotide.scala:110: error: wrong number of type arguments for scala.collection.mutable.HashTable, should be 2
class HashBag extends HashTable[String] {
                      ^
knucleotide.scala:120: error: not found: value entries
  def elements = entries
                 ^
knucleotide.scala:123: error: not found: value table
    var bucket = table(index(elemHashCode(key))).asInstanceOf[Entry]
                 ^
knucleotide.scala:125: error: not found: value elemEquals
      if (elemEquals(entryKey(bucket),key)) return bucket
          ^
knucleotide.scala:129: error: not found: value addEntry
    addEntry(bucket)
    ^
5 errors found
make: [knucleotide.scala-4.scala_run] Error 1 (ignored)
4.46s to complete and log all make actions

COMMAND LINE:
env JAVA_OPTS=-Xmx3G /usr/local/src/jdk1.6.0_25/bin/java -server -XX:+TieredCompilation  -Xbootclasspath/a:/usr/local/src/scala-2.9.0.final/lib/scala-library.jar knucleotide 0 < knucleotide-input250000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: knucleotide
Caused by: java.lang.ClassNotFoundException: knucleotide
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:306)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:247)
Could not find the main class: knucleotide.  Program will exit.
